--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -96,7 +96,6 @@
                 "type": "sap.ui.model.resource.ResourceModel",
                 "uri": "i18n/ObjectPage/Products/i18n.properties"
             },
-            
             "": {
                 "dataSource": "mainService",
                 "preload": true,
@@ -124,7 +123,11 @@
             "forceGlobalRefresh": false,
             "objectPageHeaderType": "Dynamic",
             "considerAnalyticalParameters": true,
-            "showDraftToggle": false
+            "showDraftToggle": false,
+            "flexibleColumnLayout": {
+                "defaultTwoColumnLayoutType": "TwoColumnsMidExpanded",
+                "defaultThreeColumnLayoutType": "ThreeColumnsMidExpanded"
+            }
         },
         "pages": {
             "ListReport|Products": {
@@ -132,10 +135,12 @@
                 "component": {
                     "name": "sap.suite.ui.generic.template.ListReport",
                     "list": true,
+                    
                     "settings": {
                         "condensedTableLayout": true,
                         "smartVariantManagement": true,
                         "enableTableFilterInPageVariant": true,
+                        "tableType": "ResponsiveTable",
                         "filterSettings": {
                             "dateSettings": {
                                 "useDateRange": true
